--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -1,7 +1,9 @@
 header {
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  z-index: 3;
+  z-index: 1000;
   transition: height 0.3s cubic-bezier(0.65, 0.05, 0.36, 1) 0.3s,
     background 0.3s cubic-bezier(0.65, 0.05, 0.36, 1) 0.3s;
   transition-delay: height 200ms;
